@@ -17,6 +17,7 @@ linux (4.6.1-1~exp1) UNRELEASED; urgency=medium
   * debian/patches/features/all/rt/genpatch.py: Use Python 3
   * debian/patches/features/all/rt/genpatch.py: Fix mapping of -rt version to
     upstream version
+  * debian/patches/features/all/rt/genpatch.py: Use upstream tarball directly
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
